--- a/Module1/labs/lab2_inputAndForms/index.html
+++ b/Module1/labs/lab2_inputAndForms/index.html
@@ -13,13 +13,28 @@
 
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="container">
   <header>
     <img src="logo.png">
   </header>
-  <main>
-    
-  </main>
+  <form>
+    <div>
+      <label for="email">Email Adress</label>
+      <input type="email" id="email" name="email" required />
+    </div>
+    <div>
+      <label for="date">Date for booking</label>
+      <input type="date" id="date" name="date" required/>
+    </div>
+    <div>
+      <label for="number">Number of People</label>
+      <input type="number" id="number" name="number" required/>
+    </div>
+    <div>
+      <label for="policy">I agree to the cancellation policy</label>
+      <input type="checkbox" id="policy" name="policy" required/>
+    </div>
+    <button type="submit">Book Now!</button>
+  </form>
 </body>
-
 </html>
