--- a/Module1/labs/lab2_inputAndForms/index.html
+++ b/Module1/labs/lab2_inputAndForms/index.html
@@ -28,7 +28,7 @@
     </div>
     <div>
       <label for="number">Number of People</label>
-      <input type="number" id="number" name="number" required/>
+      <input type="number" id="number" name="number" min="1" max="8" required/>
     </div>
     <div>
       <label for="policy">I agree to the cancellation policy</label>
